<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Awale</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_plateau0">0</string>
    <string name="button_plateau1">0</string>
    <string name="button_plateau2">0</string>
    <string name="button_plateau3">0</string>
    <string name="button_plateau4">0</string>
    <string name="button_plateau5">0</string>
    <string name="button_plateau6">0</string>
    <string name="button_plateau7">0</string>
    <string name="button_plateau8">0</string>
    <string name="button_plateau9">0</string>
    <string name="button_plateau10">0</string>
    <string name="button_plateau11">0</string>
    <string name="a_jo_de_jouer">Au joueur X de jouer</string>
    <string name="j0_">Joueur 1</string>
    <string name="j1_">Joueur 2</string>
    <string name="textview"></string>
    <string name="textView2"></string>
    <string name="textView3"></string>
    <string name="textView4"></string>
    <string name="reset">Reset</string>


</resources>
